cmake_minimum_required(VERSION 3.27)
project(_CrackYourPlacement)

set(CMAKE_CXX_STANDARD 14)

add_executable(_CrackYourPlacement
        .idea/-CrackYourPlacement.iml
        .idea/.gitignore
        .idea/modules.xml
        .idea/vcs.xml
        Array/FindTheDuplicate.cpp
        README.md
        Array/SortColours.cpp)
